# daytona-agent

./: .gitignore  .roomodes  README.md  ROO_COMMANDER_SYSTEM.md  pyproject.toml
examples/connect_llm/: claude-example.py  index.ts
examples/preview_app/: index.ts  main.py
examples/run_code/: index.ts  main.py
project_journal/context/: user_profile.md
project_journal/planning/: backlog.md  project_plan.md  requirements.md
project_journal/tasks/: TASK-CONTAINER-20250422-2018.md  TASK-DISC-20250422-183638.md  TASK-PM-20250422-184034.md  TASK-RESEARCH-20250422-184126.md
src/daytona_agent/: sandbox.py
supabase/: config.toml
