[project]
name = "daytona-agent"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Antonio Reid", email = "read.musik@gmail.com"},
]
dependencies = ["daytona-sdk>=0.14.0", "open-interpreter>=0.4.3", "pynput>=1.8.1", "google-generativeai>=0.7.2"]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
